<fix>Corrections alignements landing

--- a/css/style.css
+++ b/css/style.css
@@ -369,7 +369,7 @@ a {
   padding: 0px 20px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   flex-wrap: wrap;
 }
@@ -382,7 +382,7 @@ a {
 .filters__title {
   margin: 0%;
   align-self: flex-start;
-  padding: 0px 0px 25px 15px;
+  padding: 0px 0px 20px 15px;
 }
 
 .effetLoadingSpinner {
@@ -400,15 +400,14 @@ a {
 
 .partie-restaurants {
   background-color: #f6f6f6;
+  padding: 15px 15px 45px 15px;
 }
 .partie-restaurants .HomeCards__title {
-  padding-top: 40px;
-  padding-bottom: 22px;
+  padding: 40px 0px 20px 5px;
   margin: 0px;
 }
 .partie-restaurants .HomeCards {
   background-color: #f6f6f6;
-  padding: 15px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -521,13 +520,14 @@ a {
 }
 
 .headerHome {
-  height: 60px;
+  height: 65px;
 }
 .headerHome__title {
-  padding-top: 10px;
+  padding-top: 20px;
   font-family: "Shrikhand";
   font-size: 28px;
   text-align: center;
+  margin: 0;
 }
 @media screen and (min-width: 768px) {
   .headerHome__title {
@@ -536,7 +536,7 @@ a {
 }
 
 .headerMenu {
-  height: 60px;
+  height: 65px;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -555,22 +555,22 @@ a {
 .form {
   height: 337px;
   background: linear-gradient(to top, #f6f6f6 0% 86%, #eaeaea 86% 100%);
-  border-top: 2px solid #cecece;
+  border-top: 3.5px solid #cecece;
   text-align: center;
 }
-.form__searchfield-icon {
+.form__input .form__searchfield-icon {
   padding-top: 15px;
 }
-.form__searchfield-text {
+.form__input .form__searchfield-text {
   background: #eaeaea;
   border: 0px;
   padding-top: 10px;
+  width: 140px;
+  text-align: center;
 }
-.form__searchfield-text::placeholder {
-  width: fit-content;
+.form__input .form__searchfield-text::placeholder {
   color: #000;
   font-weight: 600;
-  padding-left: 25px;
   background: #eaeaea;
   border: 0px solid #eaeaea;
 }
@@ -585,6 +585,7 @@ a {
 }
 .form__resultspresentation .form__first-slogan {
   margin: 0px;
+  width: 290px;
 }
 @media screen and (min-width: 768px) {
   .form__resultspresentation .form__first-slogan {
@@ -637,11 +638,10 @@ a {
 .form__result-button {
   height: 50px;
   width: 220px;
-  margin-top: auto;
   background: linear-gradient(to top, #9356dc, #ff79d9);
   border: 0px solid;
   border-radius: 30px;
-  box-shadow: 0px 5px 2px #cfcfcf;
+  box-shadow: -4px 4px 4px #cfcfcf;
   color: #fff;
 }
 @media screen and (min-width: 768px) {
@@ -666,7 +666,6 @@ a {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  margin-bottom: 25px;
 }
 @media screen and (min-width: 992px) {
   .filterbutton {
@@ -703,7 +702,6 @@ a {
 .HomeCard {
   height: 250px;
   width: 100%;
-  margin: 10px;
   box-shadow: 4px 4px 8px #cfcfcf;
   border-radius: 15px;
   margin-bottom: 20px;
@@ -716,7 +714,7 @@ a {
 .HomeCard .HomeCard__buttonNEW--ON {
   position: absolute;
   z-index: 9999;
-  width: 95%;
+  width: 92%;
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
@@ -755,9 +753,6 @@ a {
   justify-content: space-between;
   align-items: center;
   color: #000;
-}
-.HomeCard__descriptionBloc .HomeCard__description {
-  padding-top: 5px;
 }
 .HomeCard__descriptionBloc .HomeCard__description--Name {
   margin: 0px;
