--- a/sass/components/buttons.scss
+++ b/sass/components/buttons.scss
@@ -1,7 +1,6 @@
 .form__result-button {
 	height: 50px;
 	width: 220px;
-	margin-top: auto;
 	@include tablet {
 		transform: scale(1.3);
 	}
@@ -12,7 +11,7 @@
 	background: linear-gradient(to top, $first-color, $second-color);
 	border: 0px solid;
 	border-radius: 30px;
-	box-shadow: 0px 5px 2px $background-alt-4;
+	box-shadow: -4px 4px 4px $background-alt-4;
 	color: $font-color-1;
 }
 
@@ -30,7 +29,6 @@
 	display: flex;
 	justify-content: flex-start;
 	align-items: center;
-	margin-bottom: 25px;
 	.filterbutton__circleicon {
 		font-size: $font-size-S;
 		position: relative;
