--- a/sass/layout/searchbar.scss
+++ b/sass/layout/searchbar.scss
@@ -1,27 +1,28 @@
 .form {
 	height: 337px;
-
 	background: linear-gradient(
 		to top,
 		$background-alt-3 0% 86%,
 		$background-alt-5 86% 100%
 	);
-	border-top: 2px solid #cecece;
+	border-top: 3.5px solid #cecece;
 	text-align: center;
-	&__searchfield-icon {
-		padding-top: 15px;
-	}
-	&__searchfield-text {
-		background: $background-alt-5;
-		border: 0px;
-		padding-top: 10px;
-		&::placeholder {
-			width: fit-content;
-			color: $font-color-2;
-			font-weight: $font-weight-large;
-			padding-left: 25px;
+	&__input {
+		.form__searchfield-icon {
+			padding-top: 15px;
+		}
+		.form__searchfield-text {
 			background: $background-alt-5;
-			border: 0px solid $background-alt-5;
+			border: 0px;
+			padding-top: 10px;
+			width: 140px;
+			text-align: center;
+			&::placeholder {
+				color: $font-color-2;
+				font-weight: $font-weight-large;
+				background: $background-alt-5;
+				border: 0px solid $background-alt-5;
+			}
 		}
 	}
 }
@@ -36,6 +37,7 @@
 
 	.form__first-slogan {
 		margin: 0px;
+		width: 290px;
 		@include tablet {
 			font-size: $font-size-XXL;
 		}
